Project updated